# easy-segmenter

./: Cargo.toml  README.md
.github/workflows/: ci.yml  rust.yml  toml.yml
bench/: Cargo.toml  README.md
bench/benches/: main.rs
bench/data/: gakumonno_susume.txt
benchmark/: .gitignore  gakumon-no-susume.norm.txt  run.sh
benchmark/easy-segmenter-bench/: Cargo.toml
benchmark/easy-segmenter-bench/src/: dump.rs  main.rs
benchmark/ja_sentence_segmenter-bench/: main.py
benchmark/normalize/: main.py
benchmark/pragmatic_segmenter-bench/: main.rb
comparison/: README.md  dump.sh  run.sh
comparison/bunkai-bench/: main.py
comparison/easy-segmenter-bench/: Cargo.toml
comparison/easy-segmenter-bench/src/: dump.rs  main.rs
comparison/ja_sentence_segmenter-bench/: dump.py  main.py
data/: README.md
easy-segmenter/src/: basic.rs  lib.rs  matcher.rs  segmenter.rs
easy-segmenter/src/segmenter/: builder.rs  tests.rs
src/: basic.rs  basic_ja.rs  bitset.rs  errors.rs  lib.rs  matcher.rs  rule.rs  segmenter.rs  template.rs
src/segmenter/: builder.rs  tests.rs
src/template/: ja.rs
template_rules/: ja.toml
workspace-extract/: extract.py
