[package]
name = "easy-segmenter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
regex = "1"
serde = "=1.0.145"
serde_derive = "=1.0.145"
toml = "=0.5.9"

[workspace]
members = ["bench"]
exclude = ["comparison"]
