[package]
name = "easy-segmenter-bench"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-segmenter = { path = ".." } # Apache-2.0 or MIT
regex = "1"

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] } # Apache-2.0 or MIT

[[bench]]
name = "main"
harness = false