[package]
name = "easy-segmenter-bench"
version = "0.1.0"
edition = "2021"
default-run = "easy-segmenter-bench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
easy-segmenter = { path = "../.." }

[[bin]]
name = "dump"
path = "src/dump.rs"